--- a/custom/themes/ingenuity/src/sass/layout/_home.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_home.scss
@@ -24,21 +24,33 @@
 	left: 0;
 	width: 115%;
 	height: 115%;
+	@include media($bp-med) {
+		top: -300px;
+		left: -300px;
+		width: 200%;
+		height: 200%;
+	}
+	@include media($bp-large) {
+		top: 0;
+		left: 0;
+		width: 115%;
+		height: 115%;
+	}
 }
 
-@media (min-aspect-ratio: 16/9) {
-  .fullscreen-bg__video {
-    height: 300%;
-    top: -100%;
-  }
-}
+// @media (min-aspect-ratio: 16/9) {
+//   .fullscreen-bg__video {
+//     height: 300%;
+//     top: -100%;
+//   }
+// }
 
-@media (max-aspect-ratio: 16/9) {
-  .fullscreen-bg__video {
-    width: 300%;
-    left: -100%;
-  }
-}
+// @media (max-aspect-ratio: 16/9) {
+//   .fullscreen-bg__video {
+//     width: 300%;
+//     left: -100%;
+//   }
+// }
 
 .rw-wrapper{
 	// width: 80%;
@@ -55,7 +67,7 @@
 		margin-top: 50px;
 	}
 	@include media($bp-large) {
-		margin-top: 0px;
+		margin-top: 50px;
 	}
 }
 h2.rw-sentence{
@@ -72,8 +84,8 @@ h2.rw-sentence{
 	@include media($bp-med) {
 		text-align: left;
 		margin: 0 0 0 20px;
-		font-size: modular-scale(5); 
-		line-height: modular-scale(5); 
+		font-size: modular-scale(4, 1.3rem); 
+		line-height: modular-scale(4, 1.3rem); 
 	}
 	@include media($bp-large) {
 		margin: 0 8%;
@@ -92,10 +104,18 @@ h2.rw-sentence{
 }
 
 #move-over {
-padding-left: 630px;
-font-size: 100%;
+	padding-left: 630px;
+	font-size: 100%;
+	font-size: modular-scale(3, 1.3rem); 
+	line-height: modular-scale(3, 1.6rem); 
 	@include media($bp-small) {
 		display: none
+	}
+	@include media($bp-med) {
+		padding-left: 400px;
+	}
+	@include media($bp-large) {
+		padding-left: 630px;
 	}
 }
 
@@ -125,12 +145,14 @@ div.rw-words.rw-words-1 {
 		padding-left: 0;
 	}
 	@include media($bp-med) {
-		bottom: -100px;
+		// bottom: -100px;
+		bottom: 0;
 		left: -20px;
 	}
 	@include media($bp-large) {
-		bottom: -100px;
-		left: -10px; 
+		// bottom: -100px;
+		bottom: 0;
+		left: -20px; 
 		// padding-left: 100px;
 	}
 }
@@ -140,6 +162,7 @@ span.sq-ft {
 	font-size: modular-scale(2, 1.3rem); 
 	line-height: modular-scale(2, 1.6rem); 
 	color: $white;
+	display: none;
 	@include media($bp-small) {
 		display: inline;
 		font-size: modular-scale(0, 0.9rem);
