--- a/custom/themes/ingenuity/src/sass/layout/_contact.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_contact.scss
@@ -15,6 +15,7 @@
 		@include flex-direction(row);
 	}
 	width: 100%;
+	padding: 25px;
 }
 
 .contact__single {
@@ -23,14 +24,16 @@
 	position: relative;
 	min-height: 400px;	
 	// padding: 50px;
-	padding: 0 50px;
-	// margin: 1.5%;
-	@include flex(1 0 auto);
+	padding: 0 25px;
+	margin: 1.5%;
+	@include flex(0 0 30%);
 	h3 {
 		margin-bottom: 20px;
 	}
 	p {
 		margin-bottom: 15px;
+		font-size: modular-scale(0, 1.3rem);
+		line-height: modular-scale(1, 1.3rem);
 	}
 	button {
 		padding: 10px 15px;
