--- a/custom/themes/ingenuity/src/sass/layout/_team.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_team.scss
@@ -88,9 +88,10 @@
 		color: $black;
 		background-color: $yellow;
 		border: none;
-		padding: 10px 15px;
+		padding: 10px 25px;
 		// transition: all 0.5s;
 		margin-top: 25px;
+		font-family: $lite-headings;
 		&:hover {
 			background-color: darken($yellow, 20%); 
 		}
