--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -945,8 +945,9 @@ nav.expanded {
     color: black; }
   #navigation ul li {
     padding: 2px 15%;
-    font-size: 3.7888rem;
-    line-height: 3.7888rem;
+    padding-top: 10px;
+    font-size: 2.60545rem;
+    line-height: 2.60545rem;
     font-weight: 400;
     font-family: "Audimat3000-Regulier", sans-serif; }
     #navigation ul li:hover {
@@ -4937,8 +4938,9 @@ h3.mission {
     color: black;
     background-color: #fcd838;
     border: none;
-    padding: 10px 15px;
-    margin-top: 25px; }
+    padding: 10px 25px;
+    margin-top: 25px;
+    font-family: "Audimat3000-Leger", sans-serif; }
     .drop-down-panel button:hover {
       background-color: #cba603; }
 
@@ -5168,7 +5170,8 @@ button.drop-down-cross {
   flex-direction: column;
   -ms-flex-direction: column;
   min-height: 100vh;
-  width: 100%; }
+  width: 100%;
+  padding: 25px; }
   @media screen and (min-width: 50em) {
     .contact-container {
       -webkit-box-orient: horizontal;
@@ -5184,17 +5187,20 @@ button.drop-down-cross {
   width: 100%;
   position: relative;
   min-height: 400px;
-  padding: 0 50px;
-  -webkit-box-flex: 1;
-  box-flex: 1;
-  -webkit-flex: 1 0 auto;
-  -moz-flex: 1 0 auto;
-  -ms-flex: 1 0 auto;
-  flex: 1 0 auto; }
+  padding: 0 25px;
+  margin: 1.5%;
+  -webkit-box-flex: 0;
+  box-flex: 0;
+  -webkit-flex: 0 0 30%;
+  -moz-flex: 0 0 30%;
+  -ms-flex: 0 0 30%;
+  flex: 0 0 30%; }
   .contact__single h3 {
     margin-bottom: 20px; }
   .contact__single p {
-    margin-bottom: 15px; }
+    margin-bottom: 15px;
+    font-size: 1.3rem;
+    line-height: 1.7329rem; }
   .contact__single button {
     padding: 10px 15px;
     color: #4f4f4f;
