--- a/custom/themes/ingenuity/src/sass/layout/_home.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_home.scss
@@ -38,19 +38,19 @@
 	}
 }
 
-// @media (min-aspect-ratio: 16/9) {
-//   .fullscreen-bg__video {
-//     height: 300%;
-//     top: -100%;
-//   }
-// }
+@media (min-aspect-ratio: 16/9) {
+  .fullscreen-bg__video {
+    height: 300%;
+    top: -100%;
+  }
+}
 
-// @media (max-aspect-ratio: 16/9) {
-//   .fullscreen-bg__video {
-//     width: 300%;
-//     left: -100%;
-//   }
-// }
+@media (max-aspect-ratio: 16/9) {
+  .fullscreen-bg__video {
+    width: 300%;
+    left: -100%;
+  }
+}
 
 .rw-wrapper{
 	// width: 80%;
