--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -4519,6 +4519,14 @@ aside ul.post-categories {
       width: 115%;
       height: 115%; } }
 
+@media (min-aspect-ratio: 16 / 9) {
+  .fullscreen-bg__video {
+    height: 300%;
+    top: -100%; } }
+@media (max-aspect-ratio: 16 / 9) {
+  .fullscreen-bg__video {
+    width: 300%;
+    left: -100%; } }
 .rw-wrapper {
   position: relative;
   margin: 110px auto 0 auto;
