--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -787,9 +787,9 @@ span.bolded-text {
   font-size: 1.77689rem;
   margin: 0; }
 #info-window-content p {
-  font-family: "Audimat3000-Leger", sans-serif;
-  font-size: 0.9rem;
-  font-size: 1.1997rem;
+  font-family: "Audimat3000-Regulier", sans-serif;
+  font-size: 1.333rem;
+  line-height: 1.7329rem;
   margin-bottom: 0; }
 
 figcaption.logopack__download:hover {
@@ -922,7 +922,7 @@ nav.expanded {
   transition: transform .15s, opacity .7s; }
   @media screen and (max-width: 30em) {
     #navigation {
-      margin: 0 0 0 35px;
+      margin: 0;
       width: 100%; } }
 
 #navigation ul {
@@ -1038,6 +1038,10 @@ span.menu.icon {
       -ms-flex-pack: center;
           justify-content: center;
   padding-top: 50px; }
+  @media screen and (max-width: 30em) {
+    span.menu.icon {
+      padding-top: 27px;
+      padding-right: 15px; } }
 
 #nav-menu-text {
   font-family: "Audimat3000-Leger", sans-serif;
@@ -5282,6 +5286,9 @@ button.drop-down-cross {
   -moz-flex: 0 0 30%;
   -ms-flex: 0 0 30%;
   flex: 0 0 30%; }
+  @media screen and (max-width: 30em) {
+    .contact__single {
+      padding: 0 25px 50px; } }
   .contact__single h3 {
     margin-bottom: 20px; }
   .contact__single p {
