Update: diagonal stripe on mobile

--- a/custom/themes/ingenuity/src/sass/layout/_blog.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_blog.scss
@@ -32,6 +32,13 @@
 		height: 100%;
 		width: 100%;
 		z-index: -1;
+		#the-line {
+			stroke: rgba(252, 216, 56, 1);
+			stroke-width: 350;
+			@include media($bp-small) {
+				stroke-width: 150;
+			}
+		}
 	}
 }
 
