--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -4911,6 +4911,12 @@ h3.mission {
     height: 100%;
     width: 100%;
     z-index: -1; }
+    .diagonal-svg__wrapper .diagonal-svg #the-line {
+      stroke: #fcd838;
+      stroke-width: 350; }
+      @media screen and (max-width: 30em) {
+        .diagonal-svg__wrapper .diagonal-svg #the-line {
+          stroke-width: 150; } }
 
 .team__container {
   position: relative;
