--- a/custom/themes/ingenuity/src/sass/components/_navigation.scss
+++ b/custom/themes/ingenuity/src/sass/components/_navigation.scss
@@ -162,6 +162,7 @@ nav.expanded {
   a {
     color: $black;
     // transition: all 0.5s;
+    width: 100%;
   }
   li {
     padding: 2px 15%;
@@ -176,6 +177,7 @@ nav.expanded {
       cursor: pointer;
       a {
         color: $yellow;
+        width: 100%;
       }
     }
     @include media($bp-small) {
