--- a/custom/themes/ingenuity/src/sass/layout/_main.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_main.scss
@@ -88,7 +88,7 @@ nav.main-nav {
 	@include align-items(center);
 	@include justify-content(center);
 	@include media($bp-small) {
-		height: 100vh;
+		min-height: 80vh;
 	}
 	a {
 		padding-bottom: 2px;
