--- a/custom/themes/ingenuity/src/sass/layout/_blog.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_blog.scss
@@ -42,4 +42,12 @@
 	}
 }
 
+.prev-next-links {
+	width: 100%;
+	@include display(flex);
+	@include align-items(center);
+	@include justify-content(space-between);
+
+}
+
 
