--- a/custom/themes/ingenuity/src/sass/layout/_projects.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_projects.scss
@@ -132,3 +132,103 @@
 		text-align: right;
 	}
 }
+
+//  Arrow Buttons
+
+.project-nav{
+	margin-bottom: 50px;
+	@include display(flex);
+	@include align-items(center);
+	@include justify-content(center);
+	@include flex-wrap(wrap);
+	a {
+		&:hover {
+			.project-nav__arrow {
+				color: $black;
+				background-color: $yellow;
+			}
+		}
+	}
+}
+
+.project-nav__arrow {
+	position: relative;
+	width: 150px;
+	height: 50px;
+	// margin-left: 40px;
+	color: $yellow;
+	background-color: $black;
+	text-align:center;
+	// line-height:40px;
+	@include display(flex);
+	@include align-items(center);
+	@include justify-content(center);
+	@include media($bp-med) {
+		width: 200px;
+		height: 80px;
+	}
+	@include media($bp-large) {
+		width: 400px;
+		height: 100px;
+	}
+	p {
+		margin: 0;
+	}
+}
+
+.project-nav__arrow--prev {
+	margin: 0 10px 0 0;
+	@include media($bp-med) {
+		margin-bottom: 0;
+	}
+	&:before {
+		content:"";
+		position: absolute;
+		right: 100%;
+		top:0px;
+		width:0px;
+		height:0px;
+		border-top:25px solid transparent;
+		border-right:40px solid $black; // how far out the point goes
+		border-bottom:25px solid transparent;
+		@include media($bp-med) {
+			border-top:40px solid transparent;
+			border-right:60px solid $black; // how far out the point goes
+			border-bottom:40px solid transparent;
+		}
+		@include media($bp-large) {
+			border-top:50px solid transparent;
+			border-right:70px solid $black; // how far out the point goes
+			border-bottom:50px solid transparent;
+		}
+	}
+}
+
+.project-nav__arrow--next {
+	margin: 0 0 0 10px;
+	&:after {
+		content:"";
+		position: absolute;
+		left: 100%;
+		top:0px;
+		width:0px;
+		height:0px;
+		border-top:25px solid transparent;
+		border-left:40px solid $black;
+		border-bottom:25px solid transparent;
+		@include media($bp-med) {
+			border-top:40px solid transparent;
+			border-left:60px solid $black; // how far out the point goes
+			border-bottom:40px solid transparent;
+		}
+		@include media($bp-large) {
+			border-top:50px solid transparent;
+			border-left:70px solid $black; // how far out the point goes
+			border-bottom:50px solid transparent;
+		}
+	}
+}
+
+
+
+
