Update: blog-header tweak

--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -209,6 +209,9 @@ span.black-highlight {
 			line-height:modular-scale(6, 1.3rem);
 		}
 	}
+	h2 {
+		font-family: $lite-headings;
+	}
 }
 
 // MAIN ============================
