--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -538,6 +538,8 @@ span.black-highlight {
     .default-hero.blog-hero h1 {
       font-size: 7.2933rem;
       line-height: 7.2933rem; } }
+.default-hero.blog-hero h2 {
+  font-family: "Audimat3000-Leger", sans-serif; }
 
 .navigation {
   font-family: "Audimat3000-Regulier", sans-serif; }
